# dTools

./: .gitignore  DEPLOY_README.md  LICENSE  README.md  biome.json  electron-builder.yml  electron.vite.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stats.html  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: auto-release.yml  build-release.yml  build.yml  deploy.yml  manual-build.yml  simple-build.yml
resources/: icon.icns
resources/icons/mac/: icon.icns
src/: App.tsx
src-tauri/: Cargo.toml  app.entitlements  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: deploy.rs  deploy_commands.rs  deploy_service.rs  deploy_service_tests.rs  lib.rs  tray_icon.rs
src/tauri/: TauriProvider.tsx
src/translations/: en.json
src/views/: Deploy.tsx
types/: env.d.ts
