[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5", features = ["tray-icon", "image-ico"] }
tauri-plugin-window-state = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-single-instance = "2.2"
tokio = { version = "1.45.0", features = ["full"] }
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-opener = "2.4"
tauri-plugin-deep-link = "2.4"
tauri-plugin-log = "2.2"
openssl = { version = "0.10", features = ["vendored"] }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ssh2 = "0.9"
git2 = "0.18"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
atty = "0.2"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.5"
tauri-plugin-updater = "2.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# use this to override sub-dependencies
# [patch.crates-io]
# tao = { git = "https://github.com/tauri-apps/tao", branch = "dev" }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
