[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = ["tray-icon", "image-ico"] }
tauri-plugin-window-state = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-single-instance = "2.2"
tokio = { version = "1.45.0", features = ["full"] }
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-opener = "2.4"
tauri-plugin-log = "2.2"

anyhow = "1.0"
ssh2 = "0.9"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.5"
tauri-plugin-updater = "2.3"

# Windows 平台使用原生 TLS，避免 OpenSSL 编译问题
[target.'cfg(windows)'.dependencies]
native-tls = { version = "0.2", features = ["vendored"] }
winapi = { version = "0.3", features = ["winuser"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3.8"
